# lindner-2026-ouaga-urban-heat-drivers

./: README.md  bib.bib  index.md  myst.yml
analyses/: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
analyses/R/: INSTALL.md  check_fingerprints.R  gccm_analysis.R  gccm_config.R  recompute_stats.R
analyses/config/: processing.yaml
analyses/data/: README.md
analyses/data/raw/Shapefile Ouaga/: Ouaga.dbf  Ouaga.shp  Ouaga.shx
analyses/docs/methods/: gccm_explainer.md
analyses/figures/pub/supplementary/: test_metrics.csv
analyses/notebooks/: 00_quick_start.ipynb  01_processing_pipeline.ipynb  02_hotspot_detection.ipynb  03_models.ipynb  04_causal_analysis.ipynb  README.md  download_individual_bands.ipynb
analyses/notebooks/DEM/: download_preprocess_DEM.ipynb
analyses/notebooks/Distance_measures/: road_water_distance_measures.ipynb
analyses/notebooks/Heatwave/: ERA5_Daily_Temperature_Ouagadougou.ipynb  Heatwave_Analysis_Ouagadougou.ipynb
analyses/notebooks/Hotspots/: hotspots_detection.ipynb
analyses/notebooks/NDVI_NDBI_BSI/: NDVI_NDBI_BSI_Sentinel2_Ouagadougou.ipynb
analyses/notebooks/reference/: GEE_setup.ipynb
analyses/outputs/gccm/main_E3_tau1/: results.csv  run_metadata.yaml  summary.csv
analyses/scripts/: build_submission_zip.sh  figure_style.py  generate_supplementary_figures.py  make_gccm_asymmetry_pub.py  make_gccm_convergence_pub.py  regenerate_panels.sh
analyses/src/: data.py  pipeline.py
analyses/tests/: test_data.py  test_models.py
supplementary/: hyperparameters.json
(+8 files in other folders)
